sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:6: error: not found: value a
     while (a-ecart>0 && getValeur(a-ecart)<v){
            ^AlgShellSort:6: error: not found: value a
     while (a-ecart>0 && getValeur(a-ecart)<v){
                                   ^AlgShellSort:6: error: not found: value v
     while (a-ecart>0 && getValeur(a-ecart)<v){
                                            ^AlgShellSort:7: error: not found: value a
       copie(a-ecart,a)
             ^AlgShellSort:7: error: not found: value a
       copie(a-ecart,a)
                     ^AlgShellSort:8: error: not found: value a
       a-=ecart
       ^