sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  for (i<- 1 to getNombreValeurs()-1){
    var ecart=getNombreValeurs()/2
    while (ecart>0){
     while (a-ecart>0 && getValeur(a-ecart)<v){
       copie(a-ecart,a)
       a-=ecart
     }
     ecart=ecart/2
  	}
	}
}